; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/spiffs/extr_spiffs_nucleus.c_spiffs_obj_lu_find_id_and_span.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/spiffs/extr_spiffs_nucleus.c_spiffs_obj_lu_find_id_and_span.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32 }

@SPIFFS_VIS_CHECK_ID = common dso_local global i32 0, align 4
@spiffs_obj_lu_find_id_and_span_v = common dso_local global i32 0, align 4
@SPIFFS_VIS_END = common dso_local global i64 0, align 8
@SPIFFS_ERR_NOT_FOUND = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @spiffs_obj_lu_find_id_and_span(%struct.TYPE_5__* %0, i32 %1, i32 %2, i64 %3, i64* %4) #0 {
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i64*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i64 %3, i64* %9, align 8
  store i64* %4, i64** %10, align 8
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* @SPIFFS_VIS_CHECK_ID, align 4
  %22 = load i32, i32* %7, align 4
  %23 = load i32, i32* @spiffs_obj_lu_find_id_and_span_v, align 4
  %24 = load i64, i64* %9, align 8
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %27

26:                                               ; preds = %5
  br label %28

27:                                               ; preds = %5
  br label %28

28:                                               ; preds = %27, %26
  %29 = phi i64* [ %9, %26 ], [ null, %27 ]
  %30 = call i64 @spiffs_obj_lu_find_entry_visitor(%struct.TYPE_5__* %14, i32 %17, i32 %20, i32 %21, i32 %22, i32 %23, i64* %29, i32* %8, i32* %12, i32* %13)
  store i64 %30, i64* %11, align 8
  %31 = load i64, i64* %11, align 8
  %32 = load i64, i64* @SPIFFS_VIS_END, align 8
  %33 = icmp eq i64 %31, %32
  br i1 %33, label %34, label %36

34:                                               ; preds = %28
  %35 = load i64, i64* @SPIFFS_ERR_NOT_FOUND, align 8
  store i64 %35, i64* %11, align 8
  br label %36

36:                                               ; preds = %34, %28
  %37 = load i64, i64* %11, align 8
  %38 = call i32 @SPIFFS_CHECK_RES(i64 %37)
  %39 = load i64*, i64** %10, align 8
  %40 = icmp ne i64* %39, null
  br i1 %40, label %41, label %47

41:                                               ; preds = %36
  %42 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %43 = load i32, i32* %12, align 4
  %44 = load i32, i32* %13, align 4
  %45 = call i64 @SPIFFS_OBJ_LOOKUP_ENTRY_TO_PIX(%struct.TYPE_5__* %42, i32 %43, i32 %44)
  %46 = load i64*, i64** %10, align 8
  store i64 %45, i64* %46, align 8
  br label %47

47:                                               ; preds = %41, %36
  %48 = load i32, i32* %12, align 4
  %49 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %50 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %49, i32 0, i32 1
  store i32 %48, i32* %50, align 4
  %51 = load i32, i32* %13, align 4
  %52 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %53 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %52, i32 0, i32 0
  store i32 %51, i32* %53, align 4
  %54 = load i64, i64* %11, align 8
  ret i64 %54
}

declare dso_local i64 @spiffs_obj_lu_find_entry_visitor(%struct.TYPE_5__*, i32, i32, i32, i32, i32, i64*, i32*, i32*, i32*) #1

declare dso_local i32 @SPIFFS_CHECK_RES(i64) #1

declare dso_local i64 @SPIFFS_OBJ_LOOKUP_ENTRY_TO_PIX(%struct.TYPE_5__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
